# fred-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.claude/agents/: code-reviewer.md
.claude/commands/: review-pr.md
.github/workflows/: pr.yml
mcpb/: README.md  build.sh  manifest.json
src/fred_mcp/: __init__.py  formatting.py  fred_client.py  models.py  server.py
tests/: conftest.py  test_client.py  test_compare_and_calendar.py  test_formatting.py  test_mcpb_manifest.py  test_observations.py  test_search_and_series.py  test_vintage.py
